--- a/views/user-register.pug
+++ b/views/user-register.pug
@@ -2,4 +2,14 @@ extends layout.pug
 
 block content
   form(action="/user/register", method="post")
-    input(type="hidden", name="_csrf", value:csrfToken)
+    input(type="hidden", name="_csrf", value=csrfToken)
+    label(for="username") Username
+    input(type="text" name="username" id="username")
+    label(for="email") Email
+    label(for="professionalUser") Is Professional User
+    input(type="checkbox" name="professionalUser" id="professionalUser" checked)
+    label(for="password") Password
+    input(type="password" name="password" id="password")
+    label(for="password") Confirm Password
+    input(type="password" name="password" id="password")
+    button(type="submit") Add User
