--- a/views/user-register.pug
+++ b/views/user-register.pug
@@ -1,15 +1,22 @@
 extends layout.pug
 
 block content
-  form(action="/user/register", method="post")
+  form(action="/users/register", method="post")
     input(type="hidden", name="_csrf", value=csrfToken)
+  div
     label(for="username") Username
     input(type="text" name="username" id="username")
+  div
     label(for="email") Email
+    input(type="text" name="email" id="email")
+  div
     label(for="professionalUser") Is Professional User
-    input(type="checkbox" name="professionalUser" id="professionalUser" checked)
+    input(type="checkbox" name="professionalUser" id="professionalUser" )
+  div
     label(for="password") Password
     input(type="password" name="password" id="password")
+  div
     label(for="password") Confirm Password
     input(type="password" name="password" id="password")
+  div
     button(type="submit") Add User
