--- a/views/user-register.pug
+++ b/views/user-register.pug
@@ -1,22 +1,19 @@
 extends layout.pug
 
+include utils.pug
+
 block content
+  +validationErrorSummary(errors)
   form(action="/users/register", method="post")
     input(type="hidden", name="_csrf", value=csrfToken)
-  div
     label(for="username") Username
     input(type="text" name="username" id="username")
-  div
     label(for="email") Email
     input(type="text" name="email" id="email")
-  div
     label(for="professionalUser") Is Professional User
-    input(type="checkbox" name="professionalUser" id="professionalUser" )
-  div
+    input(type="checkbox" name="professionalUser" id="professionalUser" checked=false)
     label(for="password") Password
     input(type="password" name="password" id="password")
-  div
-    label(for="password") Confirm Password
-    input(type="password" name="password" id="password")
-  div
+    label(for="confirmPassword") Confirm Password
+    input(type="password" name="confirmPassword" id="confirmPassword")
     button(type="submit") Add User
