npm installed files and added in log in and sign up links in index pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,6 @@ append head
 
 block content
   h1= title
-  p Welcome to your Project Skeleton
+  div
+    a(href='/users/log-in' role='button') Log In
+  a(href='/users/register' role='button') Sign Up
