--- a/views/user-register.pug
+++ b/views/user-register.pug
@@ -7,11 +7,11 @@ block content
   form(action="/users/register", method="post")
     input(type="hidden", name="_csrf", value=csrfToken)
     label(for="username") Username
-    input(type="text" name="username" id="username")
+    input(type="text" name="username" id="username" value=user.username)
     label(for="email") Email
-    input(type="text" name="email" id="email")
+    input(type="text" name="email" id="email" value=user.email)
     label(for="professionalUser") Is Professional User
-    input(type="checkbox" name="professionalUser" id="professionalUser" checked=false)
+    input(type="checkbox" name="professionalUser" id="professionalUser" checked=user.professionalUser)
     label(for="password") Password
     input(type="password" name="password" id="password")
     label(for="confirmPassword") Confirm Password
