fixed the index and layout pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,8 @@ html
     div
       a(href='')
           button(class='btn') Questions
+    a(href='/users/homepage')
+          button(class='btn') User Homepage
    else
     div
       a(href='/')
@@ -30,6 +32,3 @@ html
           button(class='btn') Sign Up
 
   block content
-
-
-
