--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,7 +4,7 @@ h1 {
 
 .nav_bar {
     display: flex;
-    background-color: rgb(255, 254, 245);
+    background-color: rgb(236, 235, 235);
     box-sizing: border-box;
     height: 55px;
     color: black;
@@ -14,12 +14,17 @@ h1 {
 .btn {
    height: 20px;
    margin: 10px;
-   background-color: rgb(255, 254, 245);
-   border: 0
+   background-color: rgb(236, 235, 235);
+   border: 1
 
 
 }
 
 .btn.home{
-    height: 55px;
+    height: 35px;
+}
+
+.btn.entry{
+
+    justify-content: space-around
 }
