--- a/views/question-page.pug
+++ b/views/question-page.pug
@@ -1,8 +1,8 @@
-extends layout.pug
+extends index.pug
 
 block content
   div(class='question-container')
-      h2  question.question
+      h2  #{question.question}
         ul
           each answer in question.Answers
               li #{answer.answer}
