got question links to lead to question and their answers!

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
       form(action="/users/logout", method="post")
         button(type="submit") Logout
     div
-      a(href='/questions/:id(\\d+)')
+      a(href='/questions')
           button(class='btn') Questions
       a(href='/users/homepage')
           button(class='btn') User Homepage
