--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -15,4 +15,4 @@ else
           th Questions
     tbody
       tr
-          td please answer some questions!
+          td you have no questionsplease answer some questions!
