--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -6,3 +6,6 @@ block content
         ul
           each answer in questions.Answers
               li #{answer.answer}
+  div
+    a(href='/answers')
+      button Answer
