--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,9 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
+  div
+      a(href='/questions/add')
+          button(class='btn') Ask A Question
   h1= title
   include questions-list.pug
 
