fixed the guest login bug! had to make a get request and not post due ot the nature of the button.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,13 +30,13 @@ html
       a(href=`/questions/`)
           button(class='btn') Questions
     div
-      a(href='')
-          button(class='btn') Demo login
+      a(href='/users/guest')
+          button(class='btn') Guest Login
     div
       a(href='/users/login')
-          button(class='btn entry') Log In
+          button(class='btn entry') Log in
     div
       a(href='/users/register')
-          button(class='btn entry') Sign Up
+          button(class='btn entry') Sign up
 
   block content
