--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,8 @@ append head
 
 block content
   div
+    images(src="public/images/homepage.jpg", alt="")
+  div
       a(href='/questions/add')
           button(class='btn') Ask A Question
   h1= title
