--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -1,7 +1,9 @@
-extends index.pug
+extends layout.pug
 
 block content
   h2 Hello #{user.username}, this is your homepage
   body
     h1= title
     include questions-list.pug
+
+
