--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,40 +2,39 @@ doctype html
 html
   head
       block head
-        title="Express Starter App"
+        title="Stock Flow"
         link(rel='stylesheet' href='/stylesheets/reset.css')
           //- add page specific styles by appending to the head
         link(rel="stylesheet" href="/stylesheets/index.css")
         //- add page specific js
         script(src="/javascripts/index.js" type="module" defer)
+body
   header(class='nav_bar')
    if locals.authenticated
-     h3 logged in as #{user.username}
-     div
+     div(class='nav_bar btn')
       a(href='/')
-          button(class='btn home') StockFlow
-     div
-       form(action="/users/logout", method="post")
-         button(type="submit") Logout
+          button(class='btn home') StockFlow~
      div
        a(href=`/questions/`)
           button(class='btn') Questions
+     div
        a(href='/users/homepage')
           button(class='btn') User Homepage
+     div
+       form(action="/users/logout", method="post")
+         button(type="submit") Logout
    else
     div
       a(href='/')
-          button(class='btn home') StockFlow
+          button(class='btn home') StockFlow~
     div
       a(href=`/questions/`)
-          button(class='btn') Questions
-    div
+          button(class='btn question') Questions
       a(href='/users/guest')
-          button(class='btn') Guest Login
-    div
+          button(class='btn guest') Guest Login
+    div(class='entry-container')
       a(href='/users/login')
           button(class='btn entry') Log in
-    div
       a(href='/users/register')
           button(class='btn entry') Sign up
 
