--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,4 @@
+
 h1 {
     color: #555555;
 
@@ -52,6 +53,9 @@ button.home{
     color:rgb(86, 205, 50)
 }
 
+.btn.entry:hover{
+    background-color:  rgb(67, 161, 39);
+}
 
 .entry-container{
     margin: 7px;
@@ -65,18 +69,49 @@ button.home{
     color: black;
     height: 40px;
     font-family: inherit;
-    padding:
+}
 
+.btn.ask-question{
+    position: relative;
+    height: 4opx;
+    justify-content: flex-end;
+    background-color: rgb(86, 205, 50);
+    border-radius: 1px;
+    color: black;
+    height: 40px;
+    font-family: inherit;
+}
+
+.btn.ask-question:hover{
+    background-color:  rgb(67, 161, 39);
+}
+
+.side-bar{
+    max-width: 200px;
+    border-right: 1px solid #b4b4b4;
+}
+.side-bar.btn{
+    min-width: 140px;
+    width: 100%;
+    padding: 8px 5px 8px 5px;
+    background-color: white;
+    color: black
+}
+.side-bar.btn:hover{
+    background-color: #d3d3d3
+}
+
+
+
+.question-page{
+    display: grid;
+    grid-template-columns: 1fr 10fr;
 
 }
 
-/* .btn.entry:hover{
-    background-color: greenyellow
-} */
-
-.question-page{
-    display: flex;
-
+.questions-box{
+    display: flexbox;
+    width: 100%;
 }
 .questions-list-container{
     display: flex;
@@ -84,11 +119,7 @@ button.home{
     border: 10px;
     background-color: white;
     padding: 24px;
-    border-left: 1px solid #1d2935;
     height: 100%;
-    width: 100%;
-
-
 }
 
 
@@ -99,7 +130,39 @@ button.home{
     justify-content: space-between
 
 }
+.question-row{
+    display: flex;
 
+
+}
+
+.votes-answers-box{
+    margin: 10px;
+}
+.question-link-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end
+}
+.question-link-btn{
+    display: flex;
+    width: 100%;
+    text-decoration: none;
+}
+.question-date-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end
+}
+.question-display-box{
+    display: flexbox;
+    width: 100%;
+    margin: 10px;
+}
+
+/* .question-row.btn {
+
+} */
 .footer{
     display:flex;
     align-items: flex-end;
@@ -109,4 +172,32 @@ button.home{
 
 
 
+/*
 
+div(class='question-page')
+    if questions
+          div(class='side-bar')
+               a(href='/')
+                      button(class='side-bar btn') home
+          div(class='questions-list-container')
+             div(class='questions-box')
+                 div(class='questions-header')
+                   div(class='question-button-container')
+                       h1 All Questions
+                   div(class='ask-button-container')
+                      a(href=`/questions/add`)
+                          button(class='btn ask-question') Ask Question
+
+                 div
+                    p Top 5 questions
+                 div(class='')
+                    table(class='questions')
+                      thead(class='questionHead')
+                         tr
+                           th
+                      tbody(class='questionbody')
+                         each question in questions
+                               tr(class='question-row')
+                                  td: a(class='question' href=`/questions/${question.id}`)
+                                          button(class='question-row btn') #{question.question}
+    else */
