--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -8,20 +8,31 @@ html {
     font-family: 'Helvatica Neue'
 }
 
+
 .nav_bar {
     display: flex;
+    width: 100%;
     justify-content: center;
     background-color: #1d2935;
     box-sizing: border-box;
     height: 55px;
     color: black;
-
 }
 
 body{
     background-color:white;
 }
 
+.search-box{
+    display:flex;
+    margin: 9px;
+    height: 35px;
+    border-radius: 2px;
+    width: auto;
+}
+.search-container{
+    margin-right: 5px;
+}
 button {
     display: flexbox;
    height: 30px;
@@ -29,7 +40,8 @@ button {
    padding: 6px 16px;
    background-color: #1d2935;
    border: 0;
-   color: white
+   color: white;
+  
 }
 
 button.question,
@@ -69,6 +81,7 @@ button.home{
     color: black;
     height: 40px;
     font-family: inherit;
+    border-radius: 3px;
 }
 
 .btn.ask-question{
@@ -88,14 +101,18 @@ button.home{
 
 .side-bar{
     max-width: 200px;
-    border-right: 1px solid #b4b4b4;
+    border-right: 1px solid #dad9d9;
 }
 .side-bar.btn{
+    margin-top: 25px;
+    display: flex;
+    justify-content: start;
     min-width: 140px;
     width: 100%;
-    padding: 8px 5px 8px 5px;
+    padding: 8px 5px 8px 10px;
     background-color: white;
-    color: black
+    color: black;
+    text-decoration: none;
 }
 .side-bar.btn:hover{
     background-color: #d3d3d3
@@ -125,35 +142,64 @@ button.home{
 
 
 .questions-header{
-    height: 80px;
+    height: 60px;
     display:flex;
     justify-content: space-between
 
 }
-.question-row{
+.row,
+.row.question{
     display: flex;
-
-
-}
-
-.votes-answers-box{
+    border-bottom: 1px solid #dad9d9;
     margin: 10px;
 }
+
+.row.question{
+    height: 130px;
+}
+
+.counts-box{
+    margin: 10px;
+}
+
+
+.vote-box span,
+.answer-box span {
+    display:flex;
+    justify-content: center;
+    font-size: 12px
+}
+
+.answer-box{
+    margin-top: 5px;
+}
+
 .question-link-container{
     display: flex;
     width: 100%;
-    justify-content: flex-end
+    /* justify-content: flex-end */
 }
 .question-link-btn{
     display: flex;
     width: 100%;
     text-decoration: none;
+    color: rgb(67, 161, 39)
 }
-.question-date-container{
+.question-date-author-container{
     display: flex;
     width: 100%;
     justify-content: flex-end
 }
+.q-date-auth-box p{
+    margin: 10px;
+    font-size: small;
+    color: rgb(114, 113, 113)
+}
+
+#number{
+    font-size: 22px;
+}
+
 .question-display-box{
     display: flexbox;
     width: 100%;
