--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -41,11 +41,12 @@ button {
    background-color: #1d2935;
    border: 0;
    color: white;
-  
+
 }
 
 button.question,
-button.guest {
+button.guest,
+button.homepage {
     margin-top: 12px;
 
     /* border-color: rgb(255, 255, 255); */
@@ -130,6 +131,7 @@ button.home{
     display: flexbox;
     width: 100%;
 }
+
 .questions-list-container{
     display: flex;
     justify-content: center;
@@ -170,7 +172,7 @@ button.home{
     font-size: 12px
 }
 
-.answer-box{
+.answer-box {
     margin-top: 5px;
 }
 
