--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ body
           button(class='btn homepage') Homepage
      div
        form(action="/users/logout", method="post")
-         button(type="submit" class='btn entry') Logout
+         button(type="submit" class='btn entry logout') Logout
    else
     div
       a(href='/')
