--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -1,5 +1,6 @@
 
-div(class='question-page')
+div
+ div(class='question-page')
     if questions
           div(class='side-bar')
                a(href='/' class='side-bar btn') Home
