--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,9 @@ block content
   div
     images(src="public/images/homepage.jpg", alt="")
   h1
-  include questions-list
-  include footer
+  header
+    include questions-list
+    include footer
 
 
 
