--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,11 +10,11 @@ html {
 
 
 .nav_bar {
-    
+
     display: flex;
     width: 100%;
     justify-content: center;
-    background-color: #1d2935;
+    background-color: #000000;
     box-sizing: border-box;
     height: 55px;
     color: black;
@@ -39,7 +39,7 @@ button {
    height: 30px;
    margin: 0px 3px 0px 0px;
    padding: 6px 16px;
-   background-color: #1d2935;
+   background-color: #000000;
    border: 0;
    color: white;
 
@@ -55,7 +55,7 @@ button.homepage {
 
 }
 button:hover{
-    background-color:  #34475c;
+    background-color:  #2c2c2c;
 
 }
 button.home{
@@ -64,7 +64,7 @@ button.home{
     border-radius: 0;
     font-size: 25px;
     font-weight: 1000;
-    color:rgb(86, 205, 50)
+    color:rgb(91, 190, 61)
 }
 
 .btn.entry:hover{
