made the homepage more dynamic

--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -4,6 +4,6 @@ block content
   h2 Hello #{user.username}, this is your homepage
   body
     h1= title
-    include questions-list.pug
+    include questions-list
 
 
