--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,8 +10,9 @@ html {
 
 
 .nav_bar {
-
+    position:fixed;
     display: flex;
+    align-items: flex-start;
     width: 100%;
     justify-content: center;
     background-color: #000000;
@@ -104,9 +105,11 @@ button.home{
 .side-bar{
     max-width: 200px;
     border-right: 1px solid #dad9d9;
-}
-.side-bar.btn{
     margin-top: 25px;
+}
+
+.side-bar.btn{
+    margin-top: 50px;
     display: flex;
     justify-content: start;
     min-width: 140px;
@@ -125,7 +128,7 @@ button.home{
 .question-page{
     display: grid;
     grid-template-columns: 1fr 10fr;
-    margin-top: 30px;
+
 
 }
 
@@ -135,12 +138,13 @@ button.home{
 }
 
 .questions-list-container{
+    margin-top: 90px;
     display: flex;
     justify-content: center;
     border: 10px;
     background-color: white;
     padding: 24px;
-    height: 100%;
+    
 }
 
 
@@ -192,7 +196,8 @@ button.home{
 .question-date-author-container{
     display: flex;
     width: 100%;
-    justify-content: flex-end
+    justify-content: flex-end;
+
 }
 .q-date-auth-box p{
     margin: 10px;
@@ -216,8 +221,9 @@ button.home{
 .footer{
     display:flex;
     align-items: flex-end;
-    background-color: #1d2935;
-    color: white
+    background-color: #000000;
+    color: white;
+
 }
 
 
