--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -12,7 +12,6 @@ div(class='question-page')
                    div(class='ask-button-container')
                       a(href=`/questions/add`)
                           button(class='btn ask-question') Ask Question
-
                  div(class='row')
                     p Top 5 questions
                  div(class='')
@@ -35,8 +34,8 @@ div(class='question-page')
                                        a(class='question-link-btn' href=`/questions/${question.id}`) #{question.question}
                                     div(class='question-date-author-container')
                                        div(class='q-date-auth-box')
-                                           p asked 2020-09-28T20:04:34.365Z
-                                           p Author
+                                           p #{question.createdAt}
+                                           p #{question.User}
     else
          table(class='questions')
             thead(class='questionHead')
