--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ body
  div(class='alert-bar')
   header(class='nav_bar')
    if locals.authenticated
-     div(class='nav_bar btn')
+     div
       a(href='/')
           button(class='btn home') StockFlow~
      div
