--- a/views/question-form.pug
+++ b/views/question-form.pug
@@ -3,9 +3,16 @@ extends index.pug
 include utils.pug
 
 block content
-  +validationErrorSummary(errors)
-  form(action='/questions/add' method='post')
-      input(type='hidden' name='_csrf' value=csrfToken)
-      label(for='question') Ask Question Here
-      textarea(name='question' rows=15 cols=40)
-      button(type='submit') Add Question
+  div(class='question-form-page')
+      +validationErrorSummary(errors)
+      div(class='question-form-container')
+            div(class='question-form-box')
+              form(class='question-form' action='/questions/add' method='post')
+                div
+                  input(type='hidden' name='_csrf' value=csrfToken)
+                div(class='question-label')
+                  label( for='question') Ask Question Here
+                div(class='question-form-textarea')
+                  textarea(name='question' rows=10 cols=58)
+                div
+                  button(class='submit-question-button' type='submit') Add Question
