--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -1,9 +1,10 @@
-extends layout.pug
+extends index.pug
 
 block content
-  h2 Hello #{user.username}, this is your homepage
-  body
-    h1= title
-    include questions-list
+      h2 Hello #{user.username}, this is your homepage
+      body
+        h1= title
+        include questions-list
+        include footer
 
 
