--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -77,8 +77,9 @@ button.homepage {
 
 }
 button:hover{
-    background-color:  #2c2c2c;
+    /* background-color:  #2c2c2c; */
     /* background-color: white; */
+    color:greenyellow
 
 }
 button.home{
@@ -87,7 +88,11 @@ button.home{
     border-radius: 0;
     font-size: 25px;
     font-weight: 1000;
-    color:rgb(91, 190, 61)
+    color:rgb(52, 151, 21)
+}
+
+button.home:hover{
+    color: greenyellow;
 }
 
 .btn.entry:hover{
@@ -137,14 +142,16 @@ button.home{
 
 .side-bar{
     max-width: 200px;
-    border-right: 1px solid rgb(204, 204, 204);
+    /* border-right: 1px solid rgb(204, 204, 204); */
     margin-top: 25px;
     /* background-color: white; */
 
 }
 
+
+
 .side-bar.btn{
-    margin-top: 30px;
+    margin-top: 65px;
     display: flex;
     justify-content: start;
     min-width: 140px;
@@ -158,7 +165,8 @@ button.home{
     border-radius: 5px;
 }
 .side-bar.btn:hover{
-    background-color: #d3d3d3
+    background-color: black;
+    color: white;
 }
 
 
@@ -285,6 +293,13 @@ button.home{
 
 }
 
+.login-user-message{
+    color: white;
+    max-width: 200px;
+    font-size: small;
+    padding-left: 15px;
+    min-width: 50px;
+}
 .login-form{
     position: absolute;
     margin-top: 80px;
