demo login label

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -40,7 +40,7 @@ body
       a(href=`/questions/`)
           button(class='btn question') Questions
       a(href='/users/guest')
-          button(class='btn guest') Guest Login
+          button(class='btn guest') Demo Login
     div(class='search-container')
       input(type='search' class='search-box')
     div(class='entry-container')
