--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -39,7 +39,7 @@ html {
 } */
 
 body{
-    background-color:rgb(204, 204, 204);
+    background-color:rgb(223, 222, 222);
 }
 
 
@@ -161,7 +161,7 @@ button.home:hover{
     background-color: white;
     color: black;
     text-decoration: none;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
     border-radius: 5px;
 }
 .side-bar.btn:hover{
@@ -193,7 +193,7 @@ button.home:hover{
     padding: 24px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
 }
 
 
@@ -305,9 +305,9 @@ button.home:hover{
     margin-top: 80px;
     width: 300px;
     padding: 30px;
-    border: 0.5px solid black;
+
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
     background-color: white;
 }
 
@@ -358,9 +358,9 @@ button.home:hover{
     margin-top: 80px;
     width: 300px;
     padding: 30px;
-    border: 0.5px solid black;
+
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
     background-color: white;
 }
 .signup {
@@ -415,6 +415,7 @@ button.home:hover{
     width: 800px;
     padding: 20px;
     border-radius: 5px;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
 }
 
 .answer-box{
@@ -429,6 +430,7 @@ button.home:hover{
 }
 .question-form-box{
     margin-top: 100px;
+
 }
 
 .question-form-textarea{
@@ -440,9 +442,9 @@ button.home:hover{
     margin-top: 80px;
     width: 500px;
     padding: 30px;
-    border: 0.5px solid black;
+    
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
     background-color: white;
 
 }
@@ -476,7 +478,7 @@ button.home:hover{
     padding: 30px;
     border: 0.5px solid black;
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 1px #747373;
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
     background-color: white;
 
 }
