made css changes from stock to pet

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="Stock Flow"
+        title="PetFlow"
         link(rel='stylesheet' href='/stylesheets/reset.css')
           //- add page specific styles by appending to the head
         link(rel="stylesheet" href="/stylesheets/index.css")
@@ -16,7 +16,7 @@ body
         image(class='favicon' src='/images/logo.png')
      div
       a(href='/')
-          button(class='btn home') StockFlow
+          button(class='btn home') PetFlow
      div
        a(href=`/questions/`)
           button(class='btn question') Questions
@@ -35,7 +35,7 @@ body
         image(class='favicon' src='/images/logo.png')
     div
       a(href='/')
-          button(class='btn home') StockFlow
+          button(class='btn home') PetFlow
     div
       a(href=`/questions/`)
           button(class='btn question') Questions
