--- a/views/question-form.pug
+++ b/views/question-form.pug
@@ -15,4 +15,4 @@ block content
                 div(class='question-form-textarea')
                   textarea(name='question' rows=10 cols=58)
                 div
-                  button(class='submit-question-button' type='submit') Add Question
+                  button(class='submit-question-button' type='submit') Ask Question
