--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -1,10 +1,27 @@
 extends index.pug
 
 block content
-      h2 Hello #{user.username}, this is your homepage
       body
-        h1= title
-        include questions-list
+        div(class='user-homepage-container')
+          div(class='profile-container')
+            p #{user.username}'s Homepage
+            p | #{user.email}
+            if professional
+              p | Professional User
+          div(class='questions-answers-container')
+            div(class='users-question-box')
+              h1 Questions
+                if questions
+                    each question in questions
+                      li #{question.question}
+
+            div(class='users-answers-box')
+              h1 Answers
+                if answers
+                    each answer in answers
+                      li #{answer.answer}
+
+
         include footer
 
 
